uptime-kuma/40-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: uptime.sost.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: uptime-kuma
          servicePort: 3001
